<resources>
    <!-- General strings -->
    <string name="app_name">EatUp</string>
    <!-- Welcome Screen -->
    <string name="welcome_title">Food for\nEvery Mood</string>
    <string name="welcome_button">Get Started</string>

    <!-- QR Scan Screen -->
    <string name="enter_the_qr_code">Enjoy instant access\nto your card</string>
    <string name="btn_scan_qr">Scan to order</string>
    <string name="btn_problem_scanner">Problem scanning? Tap here\n</string>

    <!-- QR Manual Screen -->
    <string name="enter_the_qr_code_manual">Enter the QR Code</string>
    <string name="enter_the_qr_code_manual_subtitle">Enter the code that you received from the administrator</string>
    <string name="btn_manual_confirm">Confirm code</string>
    <string name="btn_manual_return_to_scan">Return to Scan QR Code</string>
    <string name="enter_the_otp_code">Enter the QR Code</string>

    <!-- Home Screen -->
    <string name="tab_category_all">All</string>
    <string name="tab_category_appetizers">Appetizers</string>
    <string name="tab_category_starters">Starters</string>
    <string name="tab_category_main_courses">Main Courses</string>
    <string name="tab_category_desserts">Desserts</string>
    <string name="tab_category_drinks">Drinks</string>

    <!-- Menu -->
    <string name="bottega_ristorante">Bottega Ristorante</string>
    <string name="italian_resto">Italian Resto</string>
    <string name="resume_activity_empty_order">You have to add products to your order</string>
    <string name="qr_manual_empty_auth_words">Please enter the authentication words</string>
    <string name="qr_manual_invalid_auth_words">Invalid authentication words</string>
    <string name="qr_camera_permission_denied">Camera permission is required to scan QR codes</string>
    <string name="qr_activity_invalid_qr">Invalid QR code\\nPlease try again</string>
    <string name="main_activity_no_internet_dialog_title">No Internet Connection\n</string>
    <string name="main_activity_no_internet_dialog_message">Please check your internet connection and try again</string>
    <string name="main_activity_no_internet_dialog_button">Retry</string>
    <string name="main_activity_no_internet_dialog_cancel">Exit</string>
    <string name="generate_order">Generate order</string>
    <string name="delete_order">Delete order</string>
</resources>